--- a/example/android/app/kit/src/main/AndroidManifest.xml
+++ b/example/android/app/kit/src/main/AndroidManifest.xml
@@ -77,10 +77,10 @@
             android:name="cn.wildfire.chat.app.main.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.FullScreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
         <activity
             android:name="cn.wildfire.chat.kit.conversation.ConversationActivity"
