--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -27,7 +27,6 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.plugin_chat_example"
         minSdkVersion 16
         targetSdkVersion 28
@@ -42,8 +41,6 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
     }
@@ -54,30 +51,6 @@ android {
             res.srcDirs += ['kit/src/main/res', 'kit/src/main/res-av']
             assets.srcDirs += ['kit/src/main/assets']
             java.srcDirs += ['kit/src/main/java']
-
-//            manifest.srcFile {
-//                /* 多个AndroidManifest拼接，
-//                修改AndroidManifest运行时及时更新，
-//                clean后不会自动创建，需手动sync，可能是因为分两步的问题*/
-//                def _manifests = ['src/main/AndroidManifest.xml', 'kit/src/main/AndroidManifest.xml']
-//                def main = file('src/main/AndroidManifest.xml')
-//                def targetFile = new File(getBuildDir(), "AndroidManifest.xml")
-//                if (!targetFile.getParentFile().exists()) {
-//                    targetFile.getParentFile().mkdirs()
-//                }
-//                def main_text = main.getText("utf-8")
-//                def appIndex = main_text.lastIndexOf("</application>")
-//                def targetContent = main_text.substring(0, appIndex)
-//                for (item in _manifests) {
-//                    def c = file(item).getText("utf-8")
-//                    def appTag = "<application>"
-//                    def ct = c.substring(c.indexOf(appTag) + appTag.length(), c.lastIndexOf("</application>"))
-//                    targetContent += ct
-//                }
-//                targetContent += main_text.substring(appIndex)
-//                targetFile.write(targetContent, "utf-8")
-//                return targetFile.getAbsolutePath()
-//            }
         }
     }
     lintOptions {
@@ -95,6 +68,13 @@ flutter {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation fileTree(include: ['*.jar'], dir: 'kit/libs')
+
+    api files('libs_aar/client.aar')
+    api files('libs_aar/emojilibrary.aar')
+    api files('libs_aar/imagepicker.aar')
+    api files('libs_aar/mars-core-release.aar')
+    api files('libs_aar/push.aar')
+    api files('libs_aar/avenginekit.aar')
 
     //kit
     implementation files('libs/TencentLocationSDK_v4.9.7.12_r247861_161205_1104.jar')
