--- a/FlutterChat/android/build.gradle
+++ b/FlutterChat/android/build.gradle
@@ -15,7 +15,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'com.huawei.agconnect:agcp:1.2.1.301'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.0'
+//        classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.0'
     }
 }
 
